# CameraManager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake.in  code-checker.json  readme.md  vcpkg.json
.github/actions/linux-setup/: action.yml
.github/workflows/: clang_format.yml  code_checker.yml  linux_build.yml
API/: CMakeLists.txt  camera.cpp  camera.hpp
C_Wrapper/: CameraCWrapper.cpp  CameraCWrapper.h
CameraManager/: cameramanager.cpp  cameramanager.hpp
cameras/basler/: CMakeLists.txt  basler_camera.cpp  basler_camera.h
cameras/virtual/: CMakeLists.txt
cmake/: BaslerPylon.cmake
dependencies/: CMakeLists.txt
dependencies/ffmpeg_wrapper/: CMakeLists.txt
docs/: _quarto.yml  docs.Rproj  index.html  index.qmd
docs/developer/: _metadata.yml  camera-recording-contracts.md  index.html
docs/user_guide/: index.html  index.qmd
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/API/: CMakeLists.txt  Config.cmake.in  camera.cpp  camera.hpp
src/C_Wrapper/: CameraCWrapper.cpp  CameraCWrapper.h
src/CameraManager/: cameramanager.cpp  cameramanager.hpp
src/cameras/basler/: CMakeLists.txt  basler_camera.cpp  basler_camera.h
src/cameras/virtual/: CMakeLists.txt  virtual_camera.cpp  virtual_camera.h
tests/: CMakeLists.txt
tests/contract/: CMakeLists.txt  camera_contract_tests.cpp
tests/in-source-build/: CMakeLists.txt
tests/in-source-build/project/: CMakeLists.txt  main.cpp  vcpkg.json
tests/stress/: CMakeLists.txt  basler_freerun.pfs  basler_stress_test.cpp  pylon_sim_camera.cpp  pylon_sim_camera.h  pylon_sim_stress_test.cpp  save_stress_test.cpp  stress_test_common.hpp
